small changes to Basics

--- a/jamovi/brawBasics.a.yaml
+++ b/jamovi/brawBasics.a.yaml
@@ -480,4 +480,12 @@ options:
       title: 'multiple'
       type: Action
 
+
+    - name: doBasics81ABtn
+      title: 'make'
+      type: Action
+    - name: doBasics81BBtn
+      title: 'check'
+      type: Action
+
 ...
