--- a/jamovi/brawsim.a.yaml
+++ b/jamovi/brawsim.a.yaml
@@ -1480,6 +1480,11 @@ options:
       - name: all
         title: all
       default: all
+
+    - name: alwaysDoLong
+      title: ''
+      type: Bool
+      default: true
       
     - name: sendSample
       title: single
