minor changes to wording

--- a/jamovi/brawan.u.yaml
+++ b/jamovi/brawan.u.yaml
@@ -24,14 +24,14 @@ children:
                 stretchFactor: 1
                 children:
                   - type: TargetLayoutBox
-                    label: Dependent Variable
+                    label: Response Variable
                     children:
                       - type: VariablesListBox
                         name: DV
                         maxItemCount: 1
                         isTarget: true
                   - type: TargetLayoutBox
-                    label: Independent Variable
+                    label: Predictor Variables
                     children:
                       - type: VariablesListBox
                         name: IV
